--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div class="row">
               <div class="col-md-12 text-center">
-                <a class="borderer" style="border-color: #0078ff;"; href="http://localhost/CV/Curriculum Guillermo Martínez Pérez.pdf" target="_blank">Descargar mi CV</a>
+                <a class="borderer" style="border-color: #0078ff;"; href="Curriculum Guillermo Martínez Pérez.pdf" target="_blank">Descargar mi CV</a>
               </div>
             </div>
           </div>
