--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
           <div class="work-box">
             <a href="img/master i4.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/etsiit.jpg" alt="" class="img-fluid">
+                <img src="img/cursos.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
