--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/master i4.jpg" data-lightbox="gallery-mf">
+            <a href="img/cursos_2.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/cursos.jpg" alt="" class="img-fluid">
               </div>
