--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="intro-title mb-4">Soy Guillermo Martínez</h1>
           <h1 class="intro-title mb-4" style="font-size:x-large;">Ingeniero en Sistemas de Telecomunicación</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Drones,Robótica,Industria 4.0,Vehículos autónomos,Visión artificial</span><strong class="text-slider"></strong></p>
+          <p class="intro-subtitle"><span class="text-slider-items">Visión artificial,Drones,Robótica,Industria 4.0,Vehículos autónomos</span><strong class="text-slider"></strong></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
