--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">CESADAR</h2>
+                    <h2 class="w-title">Gs España</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">25 Abr 2019 - 22 Ene 2020</span>
+                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad</span>
                     </div>
                   </div>
                   <div class="col-sm-4">
