--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="work-box">
             <a href="img/imagen.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/Panel control.jpg" alt="" class="img-fluid">
+                <img src="img/Gs España.jpg" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
