--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         
         <div class="col-md-4">
           <div class="work-box">
-            <a href="img/imagen.jpg" data-lightbox="gallery-mf">
+            <a href="img/Detalle_Gs España.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
                 <img src="img/Gs España.jpg" alt="" class="img-fluid">
               </div>
