--- a/index.html
+++ b/index.html
@@ -198,7 +198,10 @@
         </div>
       </div>
       <div class="row">
-        
+        <script>
+          n =  new Date();
+          m = n.getMonth() + 1;
+        </script>
         <div class="col-md-4">
           <div class="work-box">
             <a href="img/Detalle_Gs España.jpg" data-lightbox="gallery-mf">
@@ -210,7 +213,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Gs España</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad</span>
+                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad <?php echo date('Y-m-d');?> </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
