--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Gs España</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad <script> "( "+m+" )" </script> </span>
+                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad <script> document.getElementById("date").innerHTML = "("+m+" )" </script> </span>
                     </div>
                   </div>
                   <div class="col-sm-4">
