--- a/index.html
+++ b/index.html
@@ -209,12 +209,12 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Gs España</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad </span> <span class="w-date" id="dateeee"></span> 
+                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad </span> <span class="w-date" id="dateeee"> Meses</span> 
                       
                       <script>
                         n =  new Date();
                         y = n.getFullYear();
-                        m = n.getMonth() + 1;
+                        m = n.getMonth();
                         d = n.getDate();
                         document.getElementById("dateeee").innerHTML = "("+m+")";
                       </script>
