--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                   <div class="col-sm-8">
                     <h2 class="w-title">Gs España</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad </span> <span class="w-date" id="dateeee"></span><span>+" meses)"</span>
+                      <span class="w-ctegory">Business intelligence</span> / <span class="w-date">22 Ene 2021 - Actualidad </span> <span class="w-date" id="dateeee"></span><span> meses)</span>
                       
                       <script>
                         n =  new Date();
